@@ -7,7 +7,7 @@
  *	http://home.gna.org/subtitleeditor/
  *	https://gna.org/projects/subtitleeditor/
  *
- *	Copyright @ 2005-2009, kitone
+ *	Copyright @ 2005-2010, kitone
  *
  *	This program is free software; you can redistribute it and/or modify
  *	it under the terms of the GNU General Public License as published by
@@ -130,6 +130,11 @@ public:
 	 * Works only with play_subtitle.
 	 */
 	void set_repeat(bool state);
+
+	/*
+	 * Return the framerate of the video.
+	 */
+	virtual float get_framerate();
 
 protected:
 
